<package format="3">
  <name>msg_pkg</name>
  <version>0.0.1</version>
  <description>Example package with minimal setup</description>
  <maintainer email="you@example.com">1940574515@qq.com</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  
    <build_type>ament_cmake</build_type>
  </export>
</package>
